# plonkit

./: .gitignore  Cargo.toml
src/: lib.rs  reader.rs  tests.rs  utils.rs
src/recursive/: mod.rs
src/witness/: memory.rs  mod.rs  witness_calculator.rs
test/circoms/: mycircuit.circom
test/circuits/complex/: input.json
test/contract/single/test/: plonk-test.js
