[package]
name = "plonkit"
version = "0.1.6"
authors = [ "Roman Semenov <semenov.roma@gmail.com>", "Zhuo Zhang <mycinbrin@gmail.com>", "Haoyu LIN <chris.haoyul@gmail.com>" ]
description = "Library for working with circom circuits in plonk proof system"
homepage = "https://github.com/fluidex/plonkit"
license = "MIT"
repository = "https://github.com/fluidex/plonkit"
edition = "2021"

[[bin]]
name = "plonkit"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.34"
# bellman_ce = { git = "https://github.com/matter-labs/bellman", branch = "beta", default-features = false, features = [ "plonk" ] } # active features depend on build type
bellman_vk_codegen = { git = "https://github.com/fluidex/solidity_plonk_verifier.git" }
byteorder = "1"
clap = { package = "clap-v3", version = "3.0.0-beta.1" } # todo: replace with official v3 when it's released to crates.io
env_logger = "0.8.2"
franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto", branch = "beta", features = [ "multicore", "plonk" ] }
hex-literal = "0.2.1"
itertools = "0.8.1"
log = "0.4.11"
num-bigint = "0.3.3"
#num-bigint = { version = "0.4", default-features = false, features = ["rand"] }
#num-traits = "0.2.8"
num-traits = { version = "0.2.0", default-features = false }
rand = "0.4"
# recursive_aggregation_circuit = { package = "recursive_aggregation_circuit", version = "1.0.0", git = "https://github.com/matter-labs/recursive_aggregation_circuit.git", branch = "master" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
recurisive_vk_codegen = { package = "solidity_recursive_plonk_verifier", git = "https://github.com/fluidex/solidity_recursive_plonk_verifier.git" }

wasmer = "2.3.0"
fnv = { version = "1.0.3", default-features = false }
num = { version = "0.4.0" }
color-eyre = "0.6.2"
ark-ff = { version = "0.3.0", default-features = false, features = ["parallel", "asm"] }
thiserror = "1.0.38"
cfg-if = "1.0.0"
ark-ec = { version = "0.3.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "0.3.0" }


[features]
default = [ ]
